# conda-leaves

./: Cargo.toml  README.md  environment.yml
.github/workflows/: pr.yml
src/: cli.rs  env.rs  environment.rs  main.rs  metadata.rs  package.rs  utils.rs
tests/data/conda-meta/: pkg1-0.0.1.json  pkg2a-0.0.1.json  pkg2b-0.0.1.json  pkg2c-0.0.1.json  pkg3-0.0.1.json
