[package]
name = "conda-leaves"
version = "0.1.0"
authors = ["lukaszKielar <kielar.lukasz@hotmail.com>"]
edition = "2018"

[dependencies]
colored = "2"
env_logger = "0.7.1"
glob = "0.3.0"
lazy_static = "1.4.0"
log = "0.4"
regex = "1.3.9"
serde = { version = "1.0", features  = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
